# cosmic-applet-opencode-usage

./: .gitignore  .spec-context.txt  AGENTS.md  Cargo.toml  FEATURE_02_STATUS.md  FEATURE_03_STATUS.md  FEATURE_04_STATUS.md  MANUAL_TEST_REPORT.md  PIVOT_SUMMARY.md  README.md  justfile  run_viewer.sh  setup-hooks.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: scan_performance.rs
examples/: add_varied_test_data.rs  apply_migrations.rs  backfill_history.rs  check_database.rs  check_real_data.rs  clean_database.rs  clean_test_data.rs  collect_now.rs  database_usage.rs  fix_duplicates.rs  test_async_performance.rs  test_performance.rs
features/.archived/03-github-api-client/: requirements.md
features/.archived/07-error-handling/: requirements.md
features/.archived/08-local-log-fallback/: requirements.md
features/01-project-setup/: design.md  requirements.md  tasks.md
features/02-configuration-auth/: design.md  requirements.md  tasks.md
features/03-opencode-usage-reader/: design.md  requirements.md  tasks.md
features/04-basic-ui-panel/: design.md  requirements.md  tasks.md
features/05-detailed-ui-popup/: requirements.md
features/06-auto-refresh-caching/: requirements.md
features/data-collection/: IMPLEMENTATION_SUMMARY.md  design.md  requirements.md  tasks.md
features/database-integration/: DATABASE.md  IMPLEMENTATION_SUMMARY.md  design.md  requirements.md  tasks.md
features/multi-panel-metrics/: design.md  requirements.md  tasks.md
features/viewer-app/: IMPLEMENTATION_SUMMARY.md  design.md  requirements.md  tasks.md
i18n/nl/: cosmic_applet_template.ftl
res/: com.system76.CosmicAppletOpencodeUsage.desktop  com.system76.CosmicAppletOpencodeUsage.metainfo.xml  com.vasilvestre.CosmicAppletOpencodeUsage.desktop  com.vasilvestre.CosmicAppletOpencodeUsage.metainfo.xml
src/: app.rs  lib.rs  main.rs
src/core/: config.rs  github.rs  mod.rs  models.rs
src/core/collector/: mod.rs
src/core/database/: connection.rs  migrations.rs  mod.rs  repository.rs  schema.rs
src/core/opencode/: aggregator.rs  mod.rs  parser.rs  reader.rs  scanner.rs
src/ui/: formatters.rs  messages.rs  mod.rs  state.rs
src/viewer/: app.rs  charts.rs  main.rs  mod.rs  ui.rs
tests/: database_integration.rs  opencode_integration.rs  viewer_integration.rs
