[package]
name = "cosmic-applet-template"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"

[lib]
name = "cosmic_applet_template"
path = "src/lib.rs"

[[bin]]
name = "cosmic-applet-template"
path = "src/main.rs"

[dependencies]
i18n-embed-fl = "0.8"
open = "5.1.3"
rust-embed = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
keyring = { version = "3.5", features = ["sync-secret-service"] }
directories = "5.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dev-dependencies]
serde_json = "1.0"
mockito = "1.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
