[package]
name = "cosmic-applet-opencode-usage"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
rust-version = "1.80"
description = "COSMIC Desktop applet for tracking OpenCode/Claude Code usage metrics"
authors = ["Your Name <your.email@example.com>"]

[lib]
name = "cosmic_applet_opencode_usage"
path = "src/lib.rs"

[[bin]]
name = "cosmic-applet-opencode-usage"
path = "src/main.rs"

[dependencies]
i18n-embed-fl = "0.8"
rust-embed = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
serde_json = "1.0"
walkdir = "2.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["applet", "tokio", "wayland"]

[dependencies.i18n-embed]
version = "0.14"
features = ["fluent-system", "desktop-requester"]

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.8"
filetime = "0.2"

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
